# transponster

./: .bandit_baseline  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml  tests.yml
examples/guppy/: run.sh  wrapper.sh
tests/: conftest.py  test_input.py  test_processing.py  test_transponster.py  test_upload.py  test_util.py
tests/data/: datafiles_list  input_list
tests/data/datafiles/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/data/scripts/: fails_on_7_and_13.sh  hello_output.sh  not_executable.sh  shebang_not_found.sh
transponster/: __init__.py  cli.py  controller.py  download_thread.py  input.py  logging.py  main.py  processing_thread.py  upload_thread.py  util.py
