[tool.poetry]
name = "transponster"
version = "0.1.0"
description = "Get files from iRODS, process them, and upload the results."
authors = ["Adam Blanchet <ab59@sanger.ac.uk>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
transponster = "transponster.main:main"

[tool.poetry.dependencies]
python = "^3.9"
partisan = { git = "https://github.com/wtsi-npg/partisan.git", branch = "devel"}
structlog = "^21.5.0"
progressbar2 = "^4.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.1.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
